docs: complete to compile & run in dev env. readme